--- a/Tyuiu.KarpovAA.Sprint6.Task7.V2/Tyuiu.KarpovAA.Sprint6.Task7.V2.csproj
+++ b/Tyuiu.KarpovAA.Sprint6.Task7.V2/Tyuiu.KarpovAA.Sprint6.Task7.V2.csproj
@@ -107,5 +107,8 @@
   <ItemGroup>
     <None Include="Resources\help.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\XtYr_gPDUKI.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
